# probly-transformations-rosela

./: README.md
probly/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
probly/.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
probly/.github/workflows/: ci.yml  deploy-docs.yml  publish-release.yml
probly/docs/source/: api.rst  conf.py  index.rst  methods.md  references.bib
probly/docs/source/_templates/sidebar/: footer.html
probly/notebooks/examples/: bayesian_transformation_tutorial.ipynb  ensemble_transformation_tutorial.ipynb  fashionmnist_ood_ensemble.ipynb  label_relaxation_calibration.ipynb  lazy_dispatch_test.ipynb  multilib_demo.ipynb  pytraverse_tutorial.ipynb  sklearn_selective_prediction.ipynb  synthethic_regression_dropout.ipynb  temperature_scaling_calibration.ipynb  train_bnn_classification.ipynb  train_evidential_classification.ipynb  train_evidential_regression.ipynb
probly/src/lazy_dispatch/: singledispatch.py
probly/src/probly/: __init__.py  lazy_types.py  predictor.py
probly/src/probly/datasets/: __init__.py  torch.py
probly/src/probly/evaluation/: __init__.py  metrics.py  tasks.py
probly/src/probly/layers/: __init__.py  flax.py  torch.py
probly/src/probly/plot/: __init__.py  credal.py
probly/src/probly/quantification/: __init__.py  classification.py  regression.py
probly/src/probly/representation/: __init__.py  representer.py
probly/src/probly/representation/credal_set/: __init__.py  credal_set.py  jax.py  torch.py
probly/src/probly/representation/distribution/: __init__.py
probly/src/probly/representation/sampling/: __init__.py  flax_sampler.py  jax_sample.py  sample.py  sampler.py  torch_sample.py  torch_sampler.py
probly/src/probly/train/: __init__.py
probly/src/probly/train/bayesian/: __init__.py  torch.py
probly/src/probly/train/calibration/: __init__.py  torch.py
probly/src/probly/train/evidential/: __init__.py  torch.py
probly/src/probly/transformation/: __init__.py
probly/src/probly/transformation/bayesian/: __init__.py  common.py  torch.py
probly/src/probly/transformation/dropconnect/: __init__.py  common.py  flax.py  torch.py
probly/src/probly/transformation/dropout/: __init__.py  common.py  flax.py  torch.py
probly/src/probly/transformation/ensemble/: __init__.py  common.py  flax.py  torch.py
probly/src/probly/transformation/evidential/: __init__.py
probly/src/probly/transformation/evidential/classification/: __init__.py  common.py  torch.py
probly/src/probly/transformation/evidential/regression/: __init__.py  common.py  torch.py
probly/src/probly/traverse_nn/: __init__.py  common.py  flax.py  torch.py
probly/src/probly/utils/: __init__.py  errors.py  probabilities.py  sets.py  torch.py
probly/src/pytraverse/: __init__.py  composition.py  core.py  decorators.py  generic.py
probly/tests/: __init__.py  conftest.py
probly/tests/lazy_dispatch/: __init__.py  test_isinstance.py
probly/tests/probly/: __init__.py  flax_utils.py  general_utils.py  markers.py  torch_utils.py
probly/tests/probly/datasets/: test_torch.py
probly/tests/probly/evaluation/: test_metrics.py  test_tasks.py
probly/tests/probly/fixtures/: common.py  flax_models.py  torch_data.py  torch_models.py
probly/tests/probly/plot/: __init__.py  test_credal.py
probly/tests/probly/quantification/: __init__.py  test_classification.py  test_regression.py
probly/tests/probly/representation/: __init__.py
probly/tests/probly/tests_deprecations/: deprecated_features.py  test_deprecations.py  utils.py
probly/tests/probly/train/: __init__.py
probly/tests/probly/train/bayesian/: __init__.py  test_torch.py
probly/tests/probly/train/calibration/: __init__.py  test_torch.py
probly/tests/probly/train/evidential/: __init__.py  test_torch.py
probly/tests/probly/transformation/: __init__.py
probly/tests/probly/transformation/bayesian/: __init__.py  test_common.py  test_torch.py
probly/tests/probly/transformation/dropconnect/: __init__.py  test_common.py  test_flax.py  test_torch.py
probly/tests/probly/transformation/dropout/: __init__.py  test_common.py  test_flax.py  test_torch.py
probly/tests/probly/transformation/ensemble/: __init__.py  test_common.py  test_flax.py  test_porch.py
probly/tests/probly/transformation/evidential/: __init__.py
probly/tests/probly/transformation/evidential/classification/: __init__.py  test_common.py  test_evidential_classification.py
probly/tests/probly/transformation/evidential/regression/: test_can_import.py  test_flax.py  test_forward_shapes.py  test_torch.py  test_torch_forward.py
probly/tests/probly/traverse_nn/: __init__.py
probly/tests/probly/utils/: test_errors.py  test_probabilities.py  test_sets.py  test_torch.py
probly/tests/pytraverse/: __init__.py  test_composition.py  test_core.py  test_decorators.py  test_generic.py
