[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probly"
dynamic = ["version", "readme"]
description = "Uncertainty Representation and Quantification for Machine Learning"
license = "MIT"
requires-python = ">=3.12,<3.14"
dependencies = [
    "scipy",
    "matplotlib>=3.8.0",
    "mpltern",
    "numpy>=2.0.0",
    "scikit-learn",
    "tqdm",
    "joblib",
]
authors = [
    {name = "Paul Hofman", email = "paul.hofman@ifi.lmu.de"},
    {name = "Timo Löhr"},
    {name = "Maximilian Muschalik"},
    {name = "Clemens Damke"},
    {name = "Alireza Javanmardi"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

[tool.setuptools.packages.find]
where = ["./src"]
include = ["probly*", "pytraverse*", "lazy_dispatch*"]

[tool.setuptools.dynamic]
version = {attr = "probly.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[project.urls]
documentation = "https://pwhofman.github.io/probly"
source = "https://github.com/pwhofman/probly"
tracker = "https://github.com/pwhofman/probly/issues"
changelog = "https://github.com/pwhofman/probly/blob/main/CHANGELOG.md"


[dependency-groups]
torch = [
    "torch>=2.0.0",
    "torchvision",
]
jax = [
    "jax>=0.8.0",
    "flax>=0.12.0",
]
jax-cuda12 = [
    "jax[cuda12]",
]
all_ml = [
    {include-group = "torch"},
    {include-group = "jax"},
]
test = [
    "pytest>=8.3.5",       # for testing
    "pytest-cov>=6.0.0",   # for coverage
    "pytest-xdist>=3.6.1", # for parallel testing
    "packaging",           # for version parsing
]
lint = [
    "ruff>=0.14.1",       # for linting
    "pre-commit>=4.3.0",  # for running the linters pre-commit hooks
    "mypy>=1.18.2"        # for static type checking
]
docs = [
    "sphinx>=8.0.0",
    "furo",                     # Beautiful modern theme (or use sphinx-rtd-theme)
    "myst-nb",                  # Optional: Jupyter Notebook support
    "sphinx-copybutton",        # Optional: Adds copy buttons to code blocks
    "sphinx-autodoc-typehints", # Optional: Show type hints in your API docs
    "sphinxcontrib-bibtex",     # Optional: For bibliography support
]
dev = [
    "ipykernel>=6.29.5",
    "notebook>=7.3.3",
    "ipywidgets",
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "all_ml"},
]


[tool.ruff]
line-length = 120
target-version = "py312"
output-format = "full"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "N812",    # Checks for lowercase imports that are aliased to non-lowercase names (e.g. torch.nn.functional as F)
    "RET504",  # Unnecessary assignment to {name} before return statement
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "FBT",     # enforce keyword for bool
    "PLR0913", # too many arguments (>5)
    "FIX002",  # TODOs are fine in code
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs/build",
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",
    "INP001",
    "D101",
    "D102",
    "D103",
    "D404",
    "ANN001",
    "ANN201",
    "ANN202",
    "FBT001",
    "D100",
    "PLR2004",
    "PD901",
    "TCH",
    "N803",
    "C901",
]
"tests/pytraverse/**/*.py" = ["ARG001"]
"__init__.py" = [
    "I002",    # to not need from __future__ import annotations
    "PLC0414", # to allow import module as module in inits, contradicts F401
]
"*.ipynb" = [
    "T20",
    "NPY002",
    "I002",
    "D101",
    "D103",
    "PERF401",  # it's fine to have non-optimized code in notebooks
]
"docs/**/*.py" = [
    "INP001",
    "PTH",
    "I002"
]

# Use isort-compatible settings
[tool.ruff.lint.isort]
known-first-party = ["probly", "pytraverse", "lazy_dispatch"]
force-sort-within-sections = true
combine-as-imports = true
force-single-line = false
no-lines-before = ["future"]
required-imports = ["from __future__ import annotations"]
extra-standard-library = ["typing_extensions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "8.0"
addopts = [
    "--import-mode=importlib", # to avoid issues with lazy imports
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "\\s*\\.\\.\\.\\s*",
]
exclude_lines = [
    "if TYPE_CHECKING",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true    # to avoid issues with torch, numpy, scipy, etc. stubs
disallow_subclassing_any = false # to make sure we can subclass from e.g. torch.nn.Module
disallow_any_generics = false    # to avoid warnings for type-based singledispatch
disallow_untyped_calls = false   # to avoid issues with using torch, numpy, scipy, etc. internals
disable_error_code = "misc"      # disable errors caused by torch not typing decorators, wrapping would be overkill
exclude = "docs"
